Bugfix and update with 1 more song.

--- a/lagu/Tuhan_Maharahim/exports/Tuhan_Maharahim.config.yaml
+++ b/lagu/Tuhan_Maharahim/exports/Tuhan_Maharahim.config.yaml
@@ -1,7 +1,10 @@
 workInfo:
   title: "Tuhan Maharahim"
-  fullTitle: "Tuhan Maharahim (SATB)"
+  fullTitle: "Tuhan Maharahim"
   composer: "Julia Ward Howe"
+  instrument: "SATB"
+  notationType: "solmisasi" # solmisasi | standard
+  workType: "arr" # arr | retype
   workId: "Tuhan_Maharahim"
   movementName: "SATB"
   externalURL: ""
