--- a/.gitignore
+++ b/.gitignore
@@ -68,9 +68,8 @@ _site/
 .bundle/
 vendor/
 
-/lagu/test*
-/lagu/*/*
-!/lagu/*/exports
-/includes*
-*svgo.config.js*
-utilities/
+*/lagu/test*
+*/lagu/*/*
+!*/lagu/*/*.ly
+!*/lagu/*/*.ily
+!*/lagu/*/exports
