--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ favicon_ico: "/assets/images/favicon.ico"
 
 url: https://henriyulianto.github.io
 baseurl: /partitur
-source: /docs
+source: docs
 destination: docs/_site
 repository: henriyulianto/partitur
 remote_theme: pmarsceill/just-the-docs
@@ -18,6 +18,7 @@ remote_theme: pmarsceill/just-the-docs
 # Aux links for the upper right navigation
 aux_links:
   solmisasi-lily: https://henriyulianto.github.iu/solmisasi-lily
+  lagumisa.web.id: https://www.lagumisa.web.id
 aux_links_new_tab: true
 
 plugins:
