--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ theme: just-the-docs
 # Set a path/url to a favicon that will be displayed by the browser
 favicon_ico: "/partitur/assets/images/favicon.ico"
 
-url: https://henriyulianto.github.io/partitur
+#url: https://henriyulianto.github.io/partitur
 baseurl: /
 source: docs
 destination: docs/_site
