--- a/lagu/Puji_dan_Syukur/exports/Puji_dan_Syukur.config.yaml
+++ b/lagu/Puji_dan_Syukur/exports/Puji_dan_Syukur.config.yaml
@@ -3,6 +3,7 @@ workInfo:
   fullTitle: "Puji dan Syukur - Himne PNUKI 1984"
   composer: "Binsar Sitompul"
   arranger: "Frans Haryadi"
+  lyricist: "Binsar Sitompul"
   instrument: "SATB"
   notationType: "solmisasi" # solmisasi | standard
   workType: "Salinan" # Komposisi | Aransemen | Salinan
