--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Repositori Partitur Not Angka
+title: Repositori Partitur Not Angka - Henri Yulianto
 description: Repositori Partitur Not Angka oleh Henri Yulianto
 theme: just-the-docs
 
@@ -56,8 +56,6 @@ exclude:
 # Aux links for the upper right navigation
 aux_links:
   solmisasi-lily: https://henriyulianto.github.iu/solmisasi-lily
-  Lagu Misa: https://www.lagumisa.web.id
-  Madah Liturgi: https://madahliturgi.wordpress.com
 aux_links_new_tab: true
 
 plugins:
@@ -122,7 +120,7 @@ last_edit_timestamp: true # show or hide edit time - page must have `last_modifi
 last_edit_time_format: "%b %e %Y at %I:%M %p" # uses ruby's time format: https://ruby-doc.org/stdlib-2.7.0/libdoc/time/rdoc/Time.html
 
 # Color scheme supports "light" (default) and "dark"
-color_scheme: wider
+color_scheme: light
 
 # callouts_level: quiet # or loud
 callouts:
