--- a/lagu/Bunda_Maria_Doakan_Aku/exports/Bunda_Maria_Doakan_Aku.config.yaml
+++ b/lagu/Bunda_Maria_Doakan_Aku/exports/Bunda_Maria_Doakan_Aku.config.yaml
@@ -12,14 +12,14 @@ workInfo:
   externalURL: ""
 
 files:
-  audioPath: "Bunda_Maria_Doakan_Aku.mp3"
+  audioPath: "Bunda_Maria_Doakan_Aku.m4a"
 
 musicalStructure:
   #silenceAtStartSeconds: 0.1
   totalDurationSeconds: 217
   totalMeasures: 65
   lastMeasureDuration: 4/4
-  visualLeadTimeSeconds: 0.1
+  visualLeadTimeSeconds: 0
 
 # Example YAML structure for measure highlighters in bwv1006.config.yaml
 
