--- a/lagu/Puji_dan_Syukur/exports/Puji_dan_Syukur.config.yaml
+++ b/lagu/Puji_dan_Syukur/exports/Puji_dan_Syukur.config.yaml
@@ -23,7 +23,7 @@ musicalStructure:
 
 # Example YAML structure for measure highlighters in bwv1006.config.yaml
 
-# measureHighlighters:
+measureHighlighters:
   # line-breaks:
     # name: "Structure"  # Display name for UI
     # type: conditional
@@ -34,11 +34,11 @@ musicalStructure:
       # bars: [1, 3, 7, 9, 17, 29, 33, 39, 43, 67, 79, 83, 90, 93, 99, 102, 109, 113, 119, 123, 130, 138]
       # Bars in this list get color index 0, others get color index 1
   
-  # alternating:
-    # name: "Alternating Colors"
-    # type: alternating
-    # colors: [lightblue, lightgreen, lightyellow, lightpink]
-    # opacity: 0.25
+  alternating:
+    name: "Alternating Colors"
+    type: alternating
+    colors: [lightblue, lightgreen, lightyellow, lightpink]
+    opacity: 0.25
   
   # harmonic:
     # name: "Harmonic Analysis"
