--- a/lagu/Bersama_Yesus/exports/Bersama_Yesus.config.yaml
+++ b/lagu/Bersama_Yesus/exports/Bersama_Yesus.config.yaml
@@ -9,6 +9,7 @@ workInfo:
   workType: "Aransemen" # Komposisi | Aransemen | Salinan
   workId: "Bersama_Yesus"
   movementName: "SATB"
+  youtubeURL: "https://youtu.be/AXzFbW3ziJc?si=tFbsyq1U2YTbdlyN"
   externalURL: ""
 
 files:
