--- a/lagu/Bunda_Maria_Doakan_Aku/exports/Bunda_Maria_Doakan_Aku.config.yaml
+++ b/lagu/Bunda_Maria_Doakan_Aku/exports/Bunda_Maria_Doakan_Aku.config.yaml
@@ -9,6 +9,7 @@ workInfo:
   workType: "Salinan" # Komposisi | Aransemen | Salinan
   workId: "Bunda_Maria_Doakan_Aku"
   movementName: "SATB"
+  youtubeURL: "https://youtu.be/U2duWOF_yMk?si=JNl1mzDdyZnafJ0r"
   externalURL: ""
 
 files:
