Add "Bersama Kristus".

--- a/lagu/Bunda_Maria_Doakan_Aku/exports/Bunda_Maria_Doakan_Aku.config.yaml
+++ b/lagu/Bunda_Maria_Doakan_Aku/exports/Bunda_Maria_Doakan_Aku.config.yaml
@@ -6,7 +6,7 @@ workInfo:
   lyricist: "Grego Julius"
   instrument: "SATB"
   notationType: "solmisasi" # solmisasi | standard
-  workType: "Salinan" # Komposisi | Aransemen | Salinan
+  workType: "Aransemen (Musik)" # Komposisi | Aransemen | Salinan
   workId: "Bunda_Maria_Doakan_Aku"
   movementName: "SATB"
   youtubeURL: "https://youtu.be/U2duWOF_yMk?si=JNl1mzDdyZnafJ0r"
