--- a/lagu/Tuhan_Maharahim/exports/Tuhan_Maharahim.config.yaml
+++ b/lagu/Tuhan_Maharahim/exports/Tuhan_Maharahim.config.yaml
@@ -6,7 +6,7 @@ workInfo:
   lyricist: "A. Hari Kustono, Pr. (saduran)"
   instrument: "SATB"
   additionalInfo: "Judul asli: <i>Battle Hymn of the Republic</i>"
-  notationType: "solmisasi" # solmisasi | standard
+  notationType: "not angka" # not angka | not balok | not kombinasi
   workType: "Aransemen" # Komposisi | Aransemen | Salinan
   workId: "Tuhan_Maharahim"
   movementName: "SATB"
