--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ description: Repositori Partitur Not Angka oleh Henri Yulianto
 theme: just-the-docs
 
 # Set a path/url to a logo that will be displayed instead of the title
-# logo: "/assets/images/hy-site-logo.png"
+logo: "assets/images/hy-site-logo.svg"
 
 # Set a path/url to a favicon that will be displayed by the browser
 # favicon_ico: "assets/images/favicon.ico"
