--- a/lagu/Jasa_Para_Martir/exports/Jasa_Para_Martir.config.yaml
+++ b/lagu/Jasa_Para_Martir/exports/Jasa_Para_Martir.config.yaml
@@ -16,13 +16,12 @@ files:
 
 musicalStructure:
   # silenceAtStartSeconds: 1
-  totalDurationSeconds: 135.237
+  totalDurationSeconds: 133.9
   totalMeasures: 52
   lastMeasureDuration: 3/4
-  visualLeadTimeSeconds: 0.0
+  visualLeadTimeSeconds: 0.1
 
-measureHighlighters: null
-# measureHighlighters:
+measureHighlighters:
   # line-breaks:
     # name: "Structure"  # Display name for UI
     # type: conditional
@@ -33,11 +32,11 @@ measureHighlighters: null
       # bars: [1, 3, 7, 9, 17, 29, 33, 39, 43, 67, 79, 83, 90, 93, 99, 102, 109, 113, 119, 123, 130, 138]
       # Bars in this list get color index 0, others get color index 1
   
-  # alternating:
-  #   name: "Alternating Colors"
-  #   type: alternating
-  #   colors: [lightskyblue, lightsalmon, lightgreen, lightpink]
-  #   opacity: 0.25
+   alternating:
+     name: "Alternating Colors"
+     type: alternating
+     colors: [lightskyblue, lightsalmon, lightgreen, lightpink]
+     opacity: 0.25
   
   # harmonic:
     # name: "Harmonic Analysis"
